Fix erroneous whitespace at the bottom of the document

--- a/src/css/include/blank.styl
+++ b/src/css/include/blank.styl
@@ -1,13 +1,13 @@
 #all-done
   color light-gray
+  display none
   height 1px
   margin-top 40px
-  opacity 0
   text-align center
   pointer-events none
   
 #all-done.show-empty-state
-  opacity 1
+  display block
   height auto
   transition opacity 250ms
   
