--- a/src/css/include/footer.styl
+++ b/src/css/include/footer.styl
@@ -1,7 +1,7 @@
 footer
-  margin 20px auto
+  margin 0 auto
   max-width 800px
-  padding-bottom 20px
+  padding-bottom 80px
 
   ul
     color light-gray
