--- a/src/css/include/layout.styl
+++ b/src/css/include/layout.styl
@@ -6,8 +6,8 @@ body
   color gray
   font-family 'Roboto', sans-serif
   font-size 14px
-  margin 0px
-  padding 0px 0px 20px
+  margin 0
+  padding 0
   -webkit-font-smoothing antialiased
   -webkit-overflow-scrolling touch
   
